LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR__c/VENDOR__c.object-meta.xml
<CustomObject>
    <description>Vendors are external providers of services. These can be maintenance contract holders, systems providers, etc. Vendors work in combination with Vendor Contracts and Vendor Contacts to provide an accurate picture of departmental spend, and more importantly a picture of who owns which contracts for renewal purposes.</description>
    <label>Vendor</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>