LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-04-02 - N. Ehrmann - MANUAL - If there is an Account record for this company, it can be linked with this field.</description>
    <inlineHelpText>If there is an Account record for this company, link it with this field.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendors</relationshipLabel>
    <relationshipName>Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>