LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>2020-04-02 - N. Ehrmann - AUTO -The Type of the associated Account, if any.</description>
    <formula>TEXT(Account__r.Type)</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>