LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>2020-04-02 - N. Ehrmann - MANUAL - A brief description of the vendor.</description>
    <label>Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>