LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR__c/fields/Documentation_Folder__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Folder__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - A link to a folder containing the documentation for this vendor.</description>
    <inlineHelpText>A link to a GDrive folder containing the documentation for this vendor.</inlineHelpText>
    <label>Documentation Folder</label>
    <type>Url</type>
</CustomField>