LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR__c/fields/Generic_Phone__c.field-meta.xml
<CustomField>
    <fullName>Generic_Phone__c</fullName>
    <description>2020-04-02 - N. Ehrmann - MANUAL - The generic contact phone for the business. More specific numbers should be on Vendor Contact records.</description>
    <inlineHelpText>The generic contact phone for the business. More specific numbers should be on Vendor Contact records.</inlineHelpText>
    <label>Generic Phone</label>
    <type>Phone</type>
</CustomField>