LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>2020-04-03 - N. Ehrmann - MANUAL - The type of vendor.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>