LWCLearnwithFLOWOrg/force-app/main/default/objects/VENDOR__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>2020-04-02 - N. Ehrmann - MANUAL - The website of the vendor.</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>